# construction-changes-detector

./: README.md  pyproject.toml
docs/construction-changes-detector/: book.toml
docs/construction-changes-detector/src/: 04_labeling.md  06_software.md  SUMMARY.md
models/: model_ckpt1.pth
scripts/: install.sh
src/: georefCrop.py  histoeq.py  histogramMatch.py  image_reg_msecalc.py  maskfilter.py  png2georef.py  pngconv.py  qttut.py  qttut2.py  resmerger.py  reversegeocode.py  split.py
