[project]
name = "construction-changes-detector"
version = "0.1.0"
description = "Construction Changes Detection from NRSC CARTOSAT satellite imagery (panchromatic 0.65 m resolution)"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "geopy>=2.4.1",
    "numpy>=2.3.2",
    "opencv-python>=4.11.0.86",
    "pyqt5>=5.15.11",
    "pyqt6>=6.9.1",
    "rasterio>=1.4.3",
    "requests>=2.32.5",
    "scikit-image>=0.25.2"
]

